--- a/site/resources/styles/themes/osx.css
+++ b/site/resources/styles/themes/osx.css
@@ -1440,8 +1440,6 @@ table.panels td {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   display: inline-block;
-  vertical-align: top;
-  width: 450px;
 }
 .grid > div:nth-child(2) {
   padding-left: 15px;
@@ -1450,19 +1448,185 @@ table.panels td {
   padding-right: 15px;
   padding-bottom: 15px;
 }
-.grid.full-width > div {
-  width: 100%;
-  padding-right: 0;
-  padding-left: 0;
+@media screen and (min-width: 900px) {
+  .grid > div {
+    width: 50%;
+  }
 }
-.grid.tiny-tiles > div {
-  width: 200px;
+@media screen and (min-width: 1350px) {
+  .grid > div {
+    width: 33.33333333%;
+  }
 }
-.grid.small-tiles > div {
-  width: 300px;
+@media screen and (min-width: 1800px) {
+  .grid > div {
+    width: 25%;
+  }
 }
-.grid.large-tiles > div {
-  width: 600px;
+@media screen and (min-width: 2250px) {
+  .grid > div {
+    width: 20%;
+  }
+}
+@media screen and (min-width: 2700px) {
+  .grid > div {
+    width: 16.66666667%;
+  }
+}
+@media screen and (min-width: 3150px) {
+  .grid > div {
+    width: 14.28571429%;
+  }
+}
+@media screen and (min-width: 3600px) {
+  .grid > div {
+    width: 12.5%;
+  }
+}
+@media screen and (min-width: 4050px) {
+  .grid > div {
+    width: 11.11111111%;
+  }
+}
+@media screen and (min-width: 4500px) {
+  .grid > div {
+    width: 10%;
+  }
+}
+@media screen and (min-width: 400px) {
+  .grid.tiny-tiles > div {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .grid.tiny-tiles > div {
+    width: 33.33333333%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .grid.tiny-tiles > div {
+    width: 25%;
+  }
+}
+@media screen and (min-width: 1000px) {
+  .grid.tiny-tiles > div {
+    width: 20%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .grid.tiny-tiles > div {
+    width: 16.66666667%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .grid.tiny-tiles > div {
+    width: 14.28571429%;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .grid.tiny-tiles > div {
+    width: 12.5%;
+  }
+}
+@media screen and (min-width: 1800px) {
+  .grid.tiny-tiles > div {
+    width: 11.11111111%;
+  }
+}
+@media screen and (min-width: 2000px) {
+  .grid.tiny-tiles > div {
+    width: 10%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .grid.small-tiles > div {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 900px) {
+  .grid.small-tiles > div {
+    width: 33.33333333%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .grid.small-tiles > div {
+    width: 25%;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .grid.small-tiles > div {
+    width: 20%;
+  }
+}
+@media screen and (min-width: 1800px) {
+  .grid.small-tiles > div {
+    width: 16.66666667%;
+  }
+}
+@media screen and (min-width: 2100px) {
+  .grid.small-tiles > div {
+    width: 14.28571429%;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .grid.small-tiles > div {
+    width: 12.5%;
+  }
+}
+@media screen and (min-width: 2700px) {
+  .grid.small-tiles > div {
+    width: 11.11111111%;
+  }
+}
+@media screen and (min-width: 3000px) {
+  .grid.small-tiles > div {
+    width: 10%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .grid.large-tiles > div {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1800px) {
+  .grid.large-tiles > div {
+    width: 33.33333333%;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .grid.large-tiles > div {
+    width: 25%;
+  }
+}
+@media screen and (min-width: 3000px) {
+  .grid.large-tiles > div {
+    width: 20%;
+  }
+}
+@media screen and (min-width: 3600px) {
+  .grid.large-tiles > div {
+    width: 16.66666667%;
+  }
+}
+@media screen and (min-width: 4200px) {
+  .grid.large-tiles > div {
+    width: 14.28571429%;
+  }
+}
+@media screen and (min-width: 4800px) {
+  .grid.large-tiles > div {
+    width: 12.5%;
+  }
+}
+@media screen and (min-width: 5400px) {
+  .grid.large-tiles > div {
+    width: 11.11111111%;
+  }
+}
+@media screen and (min-width: 6000px) {
+  .grid.large-tiles > div {
+    width: 10%;
+  }
 }
 .grid.content-sized-tiles > div {
   width: auto;
@@ -1473,6 +1637,11 @@ table.panels td {
 .grid.content-sized-tiles > div + div {
   padding-right: 5px;
   padding-bottom: 5px;
+}
+.grid.full-width > div {
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
 }
 .grid > div.full-width {
   width: 100%;
