Remove minimum page size

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -25,7 +25,7 @@
 @info_box_line_height: @text_flow_line_height;
 
 @page_max_width: 100%;
-@page_min_width: 500px;
+@page_min_width: 0%;
 
 @background_color: white;
 @text_color: #333;
