--- a/site/resources/styles/core/font-values.less
+++ b/site/resources/styles/core/font-values.less
@@ -1,11 +1,11 @@
-@body_font_size: 12pt;
-@detail_font_size: 10pt;
-@micro_font_size: 9pt;
+@body_font_size: 16px;
+@detail_font_size: 85%;
+@micro_font_size: 75%;
 
-@h1_font_size: 24pt;
-@h2_font_size: 20pt;
-@h3_font_size: 18pt;
-@h4_font_size: 12pt;
+@h1_font_size: 200%;
+@h2_font_size: 167%;
+@h3_font_size: 150%;
+@h4_font_size: 100%;
 
 @select_control_height: 35px;
 
