--- a/site/resources/styles/core/font-values.less
+++ b/site/resources/styles/core/font-values.less
@@ -1,16 +1,12 @@
 @body_font_size: 16px;
-@detail_font_size: 85%;
-@micro_font_size: 75%;
 
 @h1_font_size: 200%;
 @h2_font_size: 167%;
-@h3_font_size: 150%;
+@h3_font_size: 140%;
 @h4_font_size: 100%;
 
-@select_control_height: 35px;
+@detail_font_size: 85%;
+@micro_font_size: 75%;
 
-@icon_thirty_two_caption_offset: 8px;
-@icon_twenty_caption_offset: 2px;
-@icon_sixteen_caption_offset: 0;
-
+@select_control_height: @body_font_size * 2.25;
 @button_icon_vertical_offset: 2px;
