--- a/site/resources/styles/core/large.css
+++ b/site/resources/styles/core/large.css
@@ -28,17 +28,17 @@ h4,
 pre,
 .button,
 .menu {
-  font-size: 16pt;
+  font-size: 21.3px;
 }
 h1,
 .banner-title {
-  font-size: 28pt;
+  font-size: 200%;
 }
 h2 {
-  font-size: 18pt;
+  font-size: 167%;
 }
 h3 {
-  font-size: 16pt;
+  font-size: 140%;
 }
 h5,
 .detail,
@@ -50,31 +50,31 @@ h5,
 .footnote-reference,
 .basic-form .description,
 .message-box .description {
-  font-size: 12pt;
+  font-size: 85%;
 }
 .shell,
 .copyright,
 .versions,
 .statistics,
 .modification-time {
-  font-size: 11pt;
+  font-size: 75%;
 }
 .style-controls select:not([size]) {
-  height: 39px;
+  height: 47.925px;
 }
 .icon + .caption {
   position: relative;
 }
 .icon.thirty-two + .caption {
-  top: -6px;
+  top: -5.35px;
 }
 .icon.twenty + .caption {
-  top: -1px;
+  top: 0px;
 }
 .icon.sixteen + .caption {
-  top: 0;
+  top: 0px;
 }
 .button .icon,
 .style-controls button .icon {
-  top: 2px;
+  top: 0px;
 }
