--- a/site/resources/styles/core/large.less
+++ b/site/resources/styles/core/large.less
@@ -26,13 +26,5 @@ http://www.earthli.com/software/webcore
 
 @import "font-core";
 
-@h1_font_size: 28pt;
-@h2_font_size: 18pt;
-@h3_font_size: 16pt;
-@body_font_size: 16pt;
-@detail_font_size: 12pt;
-@micro_font_size: 11pt;
-@select_control_height: 39px;
-
-@icon_thirty_two_caption_offset: 6px;
-@icon_twenty_caption_offset: 1px;
+@body_font_size: 21.3px;
+@button_icon_vertical_offset: 0px;
