--- a/site/resources/styles/core/small.less
+++ b/site/resources/styles/core/small.less
@@ -26,16 +26,4 @@ http://www.earthli.com/software/webcore
 
 @import "font-core";
 
-@h1_font_size: 20pt;
-@h2_font_size: 14pt;
-@h3_font_size: 12pt;
-@body_font_size: 10pt;
-@detail_font_size: 8pt;
-@micro_font_size: 8pt;
-
-@select_control_height: 31px;
-
-@button_icon_vertical_offset: 2px;
-
-@icon_sixteen_caption_offset: 1px;
-@icon_twenty_caption_offset: 3px;
+@body_font_size: 14px;
