Move fonts to common stylesheet

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -155,3 +155,16 @@
 @grid_small_tile_width: 300px;
 @grid_standard_tile_width: 450px;
 @grid_large_tile_width: 600px;
+
+@body_font_size: 16px;
+
+@standard_font_size: 100%;
+@h1_font_size: 200%;
+@h2_font_size: 167%;
+@h3_font_size: 140%;
+@h4_font_size: 100%;
+@detail_font_size: 85%;
+@micro_font_size: 75%;
+
+@select_control_height: 4ex;
+@button_icon_vertical_offset: .25ex;
