--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -27,6 +27,7 @@ http://www.earthli.com/software/webcore
 @import "core-values";
 @import "core-mixins";
 @import "reset";
+@import "fonts";
 @import "structure";
 @import "viewport";
 @import "boxes";
