--- a/site/resources/styles/core/large.less
+++ b/site/resources/styles/core/large.less
@@ -24,7 +24,6 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@import "font-core";
+@import "font-size";
 
 @body_font_size: 21.3px;
-@button_icon_vertical_offset: 0px;
