--- a/site/resources/styles/core/medium.less
+++ b/site/resources/styles/core/medium.less
@@ -24,4 +24,4 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@import "font-core";  // Default font values are correct for medium
+// Default font values are correct for medium
