--- a/site/resources/styles/core/small.less
+++ b/site/resources/styles/core/small.less
@@ -24,6 +24,6 @@ http://www.earthli.com/software/webcore
 
 ****************************************************************************/
 
-@import "font-core";
+@import "font-size";
 
 @body_font_size: 14px;
