--- a/site/resources/styles/core/fonts.less
+++ b/site/resources/styles/core/fonts.less
@@ -1,13 +1,12 @@
-@import "font-values";
-@import "core-mixins";
+@import "core-values";
+@import "font-size";
 
-body,
 h4,
 pre,
 .button,
 .menu
 {
-  font-size: @body_font_size;
+  font-size: @standard_font_size;
 }
 
 h1,
@@ -49,41 +48,17 @@ h5,
   font-size: @micro_font_size;
 }
 
-.style-controls select:not([size])
+.style-controls
 {
-  height: @select_control_height;
-}
-
-.set-caption-top-relative-to-icon(@icon_size)
-{
-  top: min(0px, -((@icon_size - @body_font_size) / 2));
-}
-
-.icon
-{
-  + .caption
+  select:not([size])
   {
-    position: relative;
-  }
-
-  &.thirty-two + .caption
-  {
-    .set-caption-top-relative-to-icon(32px);
-  }
-
-  &.twenty + .caption
-  {
-    .set-caption-top-relative-to-icon(20px);
-  }
-
-  &.sixteen + .caption
-  {
-    .set-caption-top-relative-to-icon(16px);
+    height: @select_control_height;
   }
 }
 
 .button .icon,
 .style-controls button .icon
 {
+  position: relative;
   top: @button_icon_vertical_offset;
 }
