Apply more fixes/changes for responsive design

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -3,6 +3,7 @@
 @cell_spacing: 2px;
 @button_spacing: @small_spacing * 2;
 @inline_bordered_element_spacing: @cell_spacing;
+@menu_item_padding: .3em;
 
 @standard_border_radius: 4px;
 
@@ -23,6 +24,7 @@
 @text_flow_line_height: 160%;
 @compressed_text_flow_line_height: 130%;
 @info_box_line_height: @text_flow_line_height;
+@text_flow_column_width: 50em;
 
 @page_max_width: 100%;
 @page_min_width: 0%;
@@ -52,6 +54,9 @@
 @footer_text_color: @text_color;
 @banner_background_color: transparent;
 @footer_background_color: transparent;
+
+@banner_logo_width: 242px;
+@banner_logo_height: 74px;
 
 @banner_link_color: @link_color;
 @banner_link_hover_color: saturate(lighten(@banner_link_color, 20%), 20%);
