--- a/site/resources/styles/core/menus.less
+++ b/site/resources/styles/core/menus.less
@@ -144,8 +144,8 @@ button + .menu-items.buttons,
 
 .menu-items.standard li:before
 {
-  content: '|';
-  padding: 0 @button_padding;
+  content: '| ';
+  padding: 0 0 0 @menu_item_padding;
 }
 
 .menu-items.objects li:before,
