--- a/site/resources/styles/core/boxes.less
+++ b/site/resources/styles/core/boxes.less
@@ -165,19 +165,19 @@ p, div
 
 .description-box
 {
-  width: 25%;
+//  width: 25%;
   border-right: @hairline_border_width solid @standard_border_color;
   padding-right: @standard_spacing;
-}
 
-.description-box table:first-child
-{
-  margin-top: @standard_spacing;
+  table:first-child
+  {
+    margin-top: @standard_spacing;
+  }
 }
 
 .contents-box
 {
-  width: 20%;
+//  width: 20%;
   padding-left: @standard_spacing;
   padding-right: @standard_spacing;
   margin-bottom: @standard_spacing;
@@ -185,7 +185,7 @@ p, div
 
 .sub-folders-box
 {
-  width: 30%;
+//  width: 30%;
   padding-left: @standard_spacing;
   padding-right: @standard_spacing;
 }
@@ -202,7 +202,7 @@ p, div
 
 .tools-box
 {
-  width: 25%;
+//  width: 25%;
   padding-left: @standard_spacing;
   padding-right: @standard_spacing;
 }
