--- a/site/resources/styles/core/columns.less
+++ b/site/resources/styles/core/columns.less
@@ -34,14 +34,23 @@
 
 .column-set
 {
-  display: table;
-  width: 100%;
+  //display: table;
+  //width: 100%;
+
+  > div
+  {
+    .border-box();
+    display: inline-block;
+    vertical-align: top;
+
+    padding-right: @standard_spacing;
+  }
 }
 
 .column-set-column
 {
-  display: table-cell;
-  vertical-align: top;
+  //display: table-cell;
+  //vertical-align: top;
 }
 
 .left-column
@@ -57,7 +66,7 @@
 .two-columns
 {
   .border-box();
-  width: 50%;
+//  width: 50%;
 
   + .two-columns
   {
@@ -68,7 +77,7 @@
 .three-columns
 {
   .border-box();
-  width: 33%;
+//  width: 33%;
 
   + .three-columns
   {
