--- a/site/resources/styles/fonts/anonymous-pro.css
+++ b/site/resources/styles/fonts/anonymous-pro.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Anonymous+Pro:400,700";
+@import "https://fonts.googleapis.com/css?family=Anonymous+Pro:400,700";
 
 body
 {
