--- a/site/resources/styles/fonts/muli.css
+++ b/site/resources/styles/fonts/muli.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Muli:400,400italic";
+@import "https://fonts.googleapis.com/css?family=Muli:400,400italic";
 
 body
 {
