--- a/site/resources/styles/fonts/open-sans.css
+++ b/site/resources/styles/fonts/open-sans.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
 
 body
 {
