--- a/site/resources/styles/fonts/oxygen.css
+++ b/site/resources/styles/fonts/oxygen.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Oxygen:400,700";
+@import "https://fonts.googleapis.com/css?family=Oxygen:400,700";
 
 body
 {
