--- a/site/resources/styles/fonts/quicksand.css
+++ b/site/resources/styles/fonts/quicksand.css
@@ -1,4 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Quicksand";
+@import "https://fonts.googleapis.com/css?family=Quicksand";
 
 body
 {
