--- a/site/resources/styles/fonts/raleway.css
+++ b/site/resources/styles/fonts/raleway.css
@@ -1,7 +1,4 @@
-@import "http://fonts.googleapis.com/css?family=Raleway:400,700";
-
-
-/*@import "http://brick.a.ssl.fastly.net/Raleway:400,400i,700,700i";*/
+@import "https://fonts.googleapis.com/css?family=Raleway:400,700";
 
 body
 {
