Show attachment selector in full-screen preview

--- a/site/resources/styles/core/viewport.less
+++ b/site/resources/styles/core/viewport.less
@@ -104,8 +104,7 @@
                   }
                 }
 
-                > div:nth-child(3),
-                > fieldset
+                > .full-screen-optional
                 {
                   display: none;
                 }
