Fix reponsiveness in header/banner

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -50,20 +50,20 @@
 @quote_text_color: @dimmer_text_color;
 
 @banner_title_color: @title_color;
-@banner_text_color: @text_color;
+@header_text_color: @text_color;
 @footer_text_color: @text_color;
-@banner_background_color: transparent;
+@header_background_color: transparent;
 @footer_background_color: transparent;
 
 @banner_logo_width: 242px;
 @banner_logo_height: 74px;
 
-@banner_link_color: @link_color;
-@banner_link_hover_color: saturate(lighten(@banner_link_color, 20%), 20%);
-@banner_background_url: '';
+@header_link_color: @link_color;
+@header_link_hover_color: saturate(lighten(@header_link_color, 20%), 20%);
+@header_background_url: '';
 @footer_link_color: @link_color;
 @footer_link_hover_color: saturate(lighten(@footer_link_color, 20%), 20%);;
-@footer_background_url: @banner_background_url;
+@footer_background_url: @header_background_url;
 
 @hairline_border_width: 1px;
 @thin_border_width: 3px;
