--- a/site/resources/styles/core/munger.less
+++ b/site/resources/styles/core/munger.less
@@ -1,4 +1,5 @@
 @import "core-values";
+@import "core-mixins";
 
 .auto-content-block
 {
@@ -45,42 +46,6 @@
   line-height: 150%;
   margin-left: -2em;
   margin-top: .3em;
-}
-
-.align-left
-{
-  float: left;
-  margin: 0 @standard_spacing @standard_spacing 0;
-}
-
-.align-right
-{
-  float: right;
-  margin: 0 0 @standard_spacing @standard_spacing;
-}
-
-.align-center
-{
-  margin: auto;
-  display: table;
-}
-
-.clear-left
-{
-  clear: left;
-  display: block;
-}
-
-.clear-right
-{
-  clear: right;
-  display: block;
-}
-
-.clear-both
-{
-  clear: both;
-  display: block;
 }
 
 .abstract
