--- a/site/resources/styles/themes/alien.less
+++ b/site/resources/styles/themes/alien.less
@@ -2,8 +2,8 @@
 
 @background_color: black;
 @text_color: white;
-@banner_background_color: #222;
-@footer_background_color: @banner_background_color;
+@header_background_color: #222;
+@footer_background_color: @header_background_color;
 @title_color: #ff8d46;
 @link_color: #90be5a;
 @code_text_color: #a98ebd;
