--- a/site/resources/styles/themes/fog.less
+++ b/site/resources/styles/themes/fog.less
@@ -1,8 +1,8 @@
 @import "theme-base";
 
 @background_color: #EEE;
-@banner_background_color: #DDD;
-@footer_background_color: @banner_background_color;
+@header_background_color: #DDD;
+@footer_background_color: @header_background_color;
 @text_color: #333;
 @title_color: #666;
 @link_color: #06C;
