--- a/site/resources/styles/themes/hochzeit.less
+++ b/site/resources/styles/themes/hochzeit.less
@@ -4,8 +4,8 @@
 @text_color: #554433;
 @title_color: @text_color;
 @banner_title_color: @background_color;
-@banner_background_color: #BBAA99;
-@footer_background_color: @banner_background_color;
+@header_background_color: #BBAA99;
+@footer_background_color: @header_background_color;
 @accent_border_color: lighten(@text_color, 30%);
 @link_color: #5579C4;
 @highlighted_text_color: #449157;
@@ -13,8 +13,8 @@
 @selected_control_text_color: @background_color;
 @control_text_color: @text_color;
 @edit_control_text_color: @text_color;
-@banner_link_color: darken(saturate(@background_color, 30%), 5%);
-@footer_link_color: @banner_link_color;
+@header_link_color: darken(saturate(@background_color, 30%), 5%);
+@footer_link_color: @header_link_color;
 
 @background_url: 'hochzeit/milkweed_paper.jpg';
 @selected_control_background_url: 'hochzeit/fossil_paper.jpg';
