--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -228,6 +228,50 @@
   .set-responsive-columns(@base_width * 2, @base_width * 3, @base_width * 4, @base_width * 5, @base_width * 6, @base_width * 7, @base_width * 8, @base_width * 9, @base_width * 10);
 }
 
+.non-intrusive-x-spacing(@value: @standard_spacing)
+{
+  margin-left: -@value;
+  margin-right: -@value;
+  padding-left: @value;
+  padding-right: @value;
+}
+
+.align-left
+{
+  float: left;
+  margin: 0 @standard_spacing @standard_spacing 0;
+}
+
+.align-right
+{
+  float: right;
+  margin: 0 0 @standard_spacing @standard_spacing;
+}
+
+.align-center
+{
+  margin: auto;
+  display: table;
+}
+
+.clear-left
+{
+  clear: left;
+  display: block;
+}
+
+.clear-right
+{
+  clear: right;
+  display: block;
+}
+
+.clear-both
+{
+  clear: both;
+  display: block;
+}
+
 .set-responsive-columns(@two_column_min_width, @three_column_min_width, @four_column_min_width, @five_column_min_width, @six_column_min_width, @seven_column_min_width, @eight_column_min_width, @nine_column_min_width, @ten_column_min_width)
 {
   @media screen and (min-width: @two_column_min_width)
