--- a/site/resources/styles/themes/blue_tan.less
+++ b/site/resources/styles/themes/blue_tan.less
@@ -4,14 +4,14 @@
 
 @text_color: #225;
 
-@banner_background_color: @title_color;
+@header_background_color: @title_color;
 @footer_background_color: @title_color;
-@banner_text_color: @background_color;
+@header_text_color: @background_color;
 @footer_text_color: @background_color;
-@banner_link_color: #CC9;
-@footer_link_color: @banner_link_color;
-@banner_link_hover_color: #CF9;
-@footer_link_hover_color: @banner_link_hover_color;
+@header_link_color: #CC9;
+@footer_link_color: @header_link_color;
+@header_link_hover_color: #CF9;
+@footer_link_hover_color: @header_link_hover_color;
 
 @standard_border_color: darken(@background_color, 20%);
 
