Redesign page header

--- a/site/resources/styles/core/structure.less
+++ b/site/resources/styles/core/structure.less
@@ -58,6 +58,7 @@ body
           .title
           {
             display: inline-block;
+            min-height: 50px;
             color: @banner_title_color;
           }
 
