Remove "micro" font size

--- a/site/resources/styles/core/fonts.less
+++ b/site/resources/styles/core/fonts.less
@@ -31,21 +31,16 @@ h5,
 .info-box-bottom,
 .info-box-top,
 .subdued,
-.login-status,
 .footnote-reference,
 .basic-form .description,
-.message-box .description
-{
-  font-size: @detail_font_size;
-}
-
+.message-box .description,
 .shell,
 .copyright,
 .versions,
 .statistics,
 .modification-time
 {
-  font-size: @micro_font_size;
+  font-size: @detail_font_size;
 }
 
 .style-controls
