Reduce size of H3 font on home page

--- a/site/resources/styles/core/fonts.less
+++ b/site/resources/styles/core/fonts.less
@@ -57,3 +57,11 @@ h5,
   position: relative;
   top: @button_icon_vertical_offset;
 }
+
+&.subtle-titles
+{
+  h3
+  {
+    font-size: @h3_font_size * 3 / 4;
+  }
+}
