Make sure header clears all contained elements

--- a/site/resources/styles/core/structure.less
+++ b/site/resources/styles/core/structure.less
@@ -89,6 +89,13 @@ body
           padding-right: @standard_spacing;
         }
       }
+
+      &:after
+      {
+        content: "";
+        display: block;
+        clear: both;
+      }
     }
 
     .page-body
